crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__help_overlay_control_room_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 1301
expression: frame
---
"┌ help ────────────────────────────────────────────────────────────────────────┐"
"│Global                                                                        │"
"│  ?          toggle this help                                                 │"
"│  Esc        back / close help                                                │"
"│  q          quit (from the Control Room)                                     │"
"│Control Room                                                                  │"
"│  ↑↓         move selection                                                   │"
"│  Enter      open run detail (stream)                                         │"
"│  g          open gate log                                                    │"
"│  1–4 / d    choose role / dispatch fan-out                                   │"
"│  k / r      kill · retry (FAIL, or run a past run again)                     │"
"│  l          review diff and create branch (PASS with changes)                │"
"│  b / f / c  board · filter ALL → FAIL → RUN → DONE · agents                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
