crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__populated_control_room_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 333
expression: frame
---
"KIT / CONTROL ROOM  · enter open · r retry    [ALL]  1 RUNNING  1 GATING  1 FAIL"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                            "
"┌ runs ────────────────────────────────────────────────────────────────────────┐"
"│REPO           AGENT        TASK                    STATE        GATE         │"
"│  kit          codex·eng    port guard.js           RUN 2m       --           │"
"│  kit          grok·eng     frame clock             GATING 2m    --           │"
"│▶ trenchwire   codex·eng    fix red CI              DONE         FAIL         │"
"│^ tsc: 3 errors — Type 'string' is not assignable                             │"
"│  guardian     claude·eng   855-case suite          DONE         PASS         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [g]ate  [k]ill  [r]etry  [?]help  "
