crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__populated_control_room_snapshot_narrow.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 1097
expression: frame
---
"KIT / CONTROL ROOM  · enter open · r retry                  "
"[1] Frontend  [2] Backend  [3] Security  [4] Product        "
"┌ runs ────────────────────────────────────────────────────┐"
"│REPO    AGENT     TASK           STATE        GATE        │"
"│  kit   codex·eng port guard.js  RUN 2m       --          │"
"│  kit   grok·eng  frame clock    GATING 2m    --          │"
"│▶ tren… codex·eng fix red CI     DONE         FAIL        │"
"│^ tsc: 3 errors — Type 'string' is not assignable         │"
"│  guar… claude·e… 855-case suite DONE         PASS        │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
" [↑↓]  [d]ispatch  [c]agents  [k]ill  [r]etry  [?]help      "
