crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__room_with_live_and_past_runs_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / CONTROL ROOM                                                        [ALL]  1 RUNNING  0 GATING  0 FAIL  ·  14 past"
"┌ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│REPO                   AGENT           TASK                                      STATE             GATE               │"
"│  kit                  >_ codex·eng    port guard.js                             RUN 0s            --                 │"
"│── earlier · from receipts ───────────────────────────────────────────────────────────────────────────────────────────│"
"│▶ shop                 ✻  claude·eng   make the parser strict                    DONE 5m ago       FAIL               │"
"│^ npm test: 2 failing                                                                                                 │"
"│  shop                 >_ codex·eng    fix the failing test                      NO CHANGES 2h ago PASS               │"
"│  shop                 ✻  claude·eng   add a greeting file                       DONE 3d ago       PASS               │"
"│  ↓ 11 more · kit receipt                                                                                             │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [b]oard  [f]ilter  [enter] open  [g]ate  [r]etry  [?]help                                     "
