crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__room_with_only_past_runs_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
assertion_line: 644
expression: frame
---
"KIT / CONTROL ROOM                [ALL]  0 RUNNING  0 GATING  0 FAIL  ·  14 past"
"[1] Frontend  [2] Backend  [3] Security  [4] Product                            "
"┌ runs ────────────────────────────────────────────────────────────────────────┐"
"│REPO           AGENT        TASK                    STATE        GATE         │"
"│── earlier · from receipts  ·  d  give your agents a task ────────────────────│"
"│▶ shop         claude·eng   make the parser strict  DONE 5m ago  FAIL         │"
"│^ npm test: 2 failing                                                         │"
"│  shop         codex·eng    fix the failing test    NO CHANGES   PASS         │"
"│  shop         claude·eng   add a greeting file     DONE 3d ago  PASS         │"
"│  ↓ 11 more · kit receipt                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [↑↓] select  [d]ispatch  [c]agents  [b]oard  [g]ate  [r]etry  [?]help          "
