crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__run_detail_diff_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"KIT / RUN  trenchwire · codex·eng · fix red CI  DONE  GATE FAIL                 "
"worktree  /tmp/kit-wt-01FIXRUN3                                                 "
" stream  │  gate  │  diff                                                       "
"┌ diff ────────────────────────────────────────────────────────────────────────┐"
"│diff --git a/src/client.ts b/src/client.ts                                    │"
"│--- a/src/client.ts                                                           │"
"│+++ b/src/client.ts                                                           │"
"│@@ -40,3 +40,3 @@                                                             │"
"│-  return data as Response;                                                   │"
"│+  return data as string;                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" [esc] back  [1]stream  [2]gate  [3]diff  [a]ttach  [k]ill  [r]etry       follow"
