crates/kit-tui/src/ui/snapshots/kit_tui__ui__tests__too_small_snapshot.snap
---
source: crates/kit-tui/src/ui/mod.rs
expression: frame
---
"          need 60×12 (now 40×8)         "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
